# dspy-extraction

./: .env.example  .gitattributes  .gitignore  AGENTS.md  _tmp_gan_10003.txt  _tmp_gan_10052.txt  _tmp_gan_11221.txt  _tmp_gan_12810.txt  _tmp_gan_12823.txt  pyproject.toml  qwen35b_experiment_output.txt  qwen35b_smoke_output.txt  scratch_debug_pruning.py
archive/: README.md
docs/: README.md  best_pipeline_benchmark_context_assessment_20260521.md  codebase_architecture_review_20260519.md  component_ceiling_registry.md  current_research_program.md  dataset_splits_policy.md  deterministic_foundation_decisions.md  deterministic_scorer_semantics.md  dspy_gepa_react_best_practices_deep_dive.md  dspy_optimizer_investigation_20260521.md  dspy_optimizer_vs_manual_engineering_audit_20260520.md  exect_field_family_deterministic_support_map_20260520.md  exect_gold_label_audit.md  exect_label_policy_prior_error_analysis_traceability_20260519.md  exect_negative_probe_synthesis_20260520.md  exect_qwen35b_ladder_replication_plan.md  exect_qwen_s1_seizure_gap_error_analysis_20260520.md  exect_qwen_s1_seizure_gap_error_analysis_preregistration_20260520.md  exect_s0_label_policy_v4_10_implementation.md  exect_s0_label_policy_v4_11_implementation.md  exect_s0_label_policy_v4_2_implementation.md  exect_s0_label_policy_v4_3_implementation.md  exect_s0_label_policy_v4_4_implementation.md  exect_s0_label_policy_v4_5_implementation.md  exect_s0_label_policy_v4_6_implementation.md  exect_s0_label_policy_v4_7_implementation.md  exect_s0_label_policy_v4_8_implementation.md  (+159 more)
(+5389 files in other folders)
