[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-extraction"
version = "0.1.0"
description = "Deterministic foundations for clinical extraction research."
requires-python = ">=3.11"
dependencies = [
  "dspy-ai>=3.2.1",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "vulture>=2.16",
]
